--- a/style.css
+++ b/style.css
@@ -60,3 +60,33 @@ body {
     margin-left : -500px;
     
 }
+
+.background-banner-content {
+    
+    width : 400px;
+    height : 330px;
+    margin-left : 630px;
+    margin-top : 115px;
+    font-family : NVIDIA-NALA,Arial,Helvetica,Sans-Serif;
+    font-size : 23px;
+    color : white;
+    font-weight : 700;
+}
+
+.background-banner-content h3{
+    margin-top : -28px;
+    
+}
+
+.background-banner-content button {
+    height : 42.5px;
+    width : 100px;
+    margin-top : -50px;
+    
+    cursor : pointer;
+    font-size : 16px;
+    font-weight : 700;
+    color : white;
+    background-color : #76b900;
+
+}
