--- a/style.css
+++ b/style.css
@@ -185,9 +185,10 @@ body {
     flex-direction : row;
     justify-content : space-evenly;
     align-items : center;
-    border : 1px solid red;
+    
     padding-left : 90px;
     padding-right : 90px;
+    margin-top : 20px;
 }
 
 .a1-gaming {
@@ -196,16 +197,16 @@ body {
 }
 
 .a2-gaming {
-    margin-top : -20px;
+    margin-top : -2px;
     
 }
 
 .a3-gaming {
-    margin-top : -20px;
+    margin-top : -2px;
 }
 
 .a4-gaming {
-    margin-top : -20px;
+    margin-top : -2px;
 }
 
 .gaming-card-container a{
@@ -215,6 +216,7 @@ body {
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     background-color : white;
     border-radius : 3px;
+    height : 290px;
 }
 
 .gaming-div h1{
@@ -228,5 +230,12 @@ body {
     border-top-right-radius : 3px;
 }
 
+.gaming-card-container p, h3 {
+    margin-left : 15px;
+}
+
+.gaming-card-container p {
+    font-size : 14px;
+}
 
 
