--- a/style.css
+++ b/style.css
@@ -238,4 +238,66 @@ body {
     font-size : 14px;
 }
 
+.news-div {
+    background-color : #eee;
+    height : 500px;
+    margin-top : -60px;
+    
+}
+
+.news-card-container {
+    display : flex;
+    flex-direction : row;
+    justify-content : space-evenly;
+    align-items : center;
+    
+    padding-left : 90px;
+    padding-right : 90px;
+    
+}
+
+.news-card-container a {
+    text-decoration : none;
+    font-family : Arial,Helvetica,Sans-Serif;
+    width : 295px;
+    background-color : white;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    height : 375px;
+    border-radius : 3px;
+    color : black;
+}
+
+.news-card-container img {
+    width : 295px;
+    height : 166px;
+    border-top-left-radius : 3px;
+    border-top-right-radius : 3px;
+}
+
+.a1-news {
+    margin-top : -1px;
+}
+
+.a2-news {
+    margin-top : -1px;
+}
+
+.a3-news {
+    margin-top : -1px;
+}
+
+.a4-news {
+    margin-top : -1px;
+}
+
+.news-div h1{
+    text-align : center;
+    font-family : Arial,Helvetica,Sans-Serif;
+}
+
+.news-card-container p {
+    padding-left : 15px;
+    font-size : 15px;
+}
+
 
