--- a/style.css
+++ b/style.css
@@ -300,4 +300,40 @@ body {
     font-size : 15px;
 }
 
+.news-div-part2 {
+    background-color : #eee;
+    
+    height : 515px;
+}
+
+.news-card-container-part2 {
+    display : flex;
+    flex-direction : row;
+    justify-content : space-evenly;
+    align-items : center;
+    padding-left : 90px;
+    padding-right : 90px;
+    
+}
+
+.news-card-container-part2 a{
+    text-decoration : none;
+    font-family : Arial,Helvetica,Sans-Serif;
+    color : black;
+    background-color : white;
+    box-shadow : 0 3px 10px rgb(0 0 0 / 0.2);
+    border-radius : 3px;
+    height : 450px;
+}
+
+.news-card-container-part2 img {
+    border-top-left-radius : 3px;
+    border-top-right-radius : 3px;
+}
+
+.news-card-container-part2 p {
+    padding-left : 15px;
+    font-size : 15px;
+}
+
 
