--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     align-items : center;
     font-family : Arial,Helvetica,Sans-Serif;
     
+    background-color : #eee;
+    position : fixed;
+    
+    
 }
 
 .header-left {
@@ -336,4 +340,31 @@ body {
     font-size : 15px;
 }
 
+.imp-links-div {
+    background-color : #000;
+    height : 550px;
+}
 
+.imp-links-container {
+    display : flex;
+    justify-content : space-around;
+    align-items : center;
+    color : white;
+    font-family : Arial,Helvetica,Sans-Serif;
+    
+    
+}
+
+.imp-links-container a {
+    text-decoration : none;
+    color : #76b900;
+}
+
+.imp-links-container ul {
+    list-style-type : none;
+}
+
+.imp-links-div1, .imp-links-div2, .imp-links-div3 {
+    border : 1px solid white;
+    height : 400px;
+}
