--- a/style.css
+++ b/style.css
@@ -347,10 +347,14 @@ body {
 
 .imp-links-container {
     display : flex;
-    justify-content : space-around;
+    justify-content : space-evenly;
     align-items : center;
     color : white;
     font-family : Arial,Helvetica,Sans-Serif;
+    width : 1300px;
+    margin-left : 100px;
+    
+    
     
     
 }
@@ -365,6 +369,59 @@ body {
 }
 
 .imp-links-div1, .imp-links-div2, .imp-links-div3 {
-    border : 1px solid white;
+    
     height : 400px;
+    width : 400px;
+    margin-top : 35px;
 }
+
+.imp-links-container h3 {
+    font-size : 24px;
+}
+
+.links-1 {
+    margin-left : -23px;
+}
+
+.links-2 {
+    margin-left : -23px;
+}
+
+.links-3 {
+    margin-left : -23px;
+}
+
+.imp-links-div1 {
+    margin-left : -15px;
+}
+
+.imp-links-div2 {
+    margin-left : -20px;
+    padding-left : 15px;
+}
+
+.underline-div1, .underline-div2, .underline-div3 {
+    border-top : 1px solid #747474;
+    width : 380px;
+    
+}
+
+.underline-div1 {
+    margin-left : 15px;
+    margin-top : -15px;
+}
+
+.underline-div2 {
+    margin-left : 15px;
+    margin-top : -14px;
+}
+
+.underline-div3 {
+    margin-left : 15px;
+    margin-top : -13px;
+}
+
+.links-1 li, .links-2 li, .links-3 li {
+    margin-bottom : 15px;
+}
+
